--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    Software By Abhinav and Ridhima</p>
+                    Software By Abhinav and Riddhima</p>
             </div>
         </div>
     </div>
